Sat Sep 20 16:30:00 2003  Owen Taylor  <otaylor@redhat.com>

	* treeviewutils.[ch]: Move tree view utilities from main.c to here.

	* main.c: Fix a bug where all memory values were displayed multiplied by 100.

	* tree.c: Convert GtkCTree to tree view.

Sat Sep 20 13:24:38 2003  Owen Taylor  <otaylor@redhat.com>

	* main.c: Convert leak clists to tree views; clean up and simplify
	profile tree views a bit.

Sat Sep 20 11:28:43 2003  Owen Taylor  <otaylor@redhat.com>

	* main.c (process_window_new): Use a helper function to check
	all calls to glade_xml_get_widget().

	* main.c memprof.glade: Convert preferences dialog from GtkTreeView
	to GtkCList.

Sat Sep 20 10:52:06 2003  Owen Taylor  <otaylor@redhat.com>

	* intercept.c): Switch to atexit() as the primary means 
	of intercepting exiting. It isn't as good as interposing _exit, 
	but interposing _exit doesn't work with newer versions of
	GNU libc.

Wed Jul  9 22:00:01 2003  Soeren Sandmann  <sandmann@daimi.au.dk>

	* Lots of new stuff. Highlights:

		- Rewritten profiling module, that handles 
		  recursion better 
		- Profle view ported to GtkTreeView
		- New leak icon
		- New reset button

2003-06-17  Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added "ml" to ALL_LINGUAS.

2003-05-06  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.

2003-04-24  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Fix broken configure.in caused by previous commit.

2003-02-20  Dmitry G. Mastrukov  <dmitry@taurussoft.org>

	* configure.in: Added Belarusian to ALL_LINGUAS.

2003-02-03  Daniel Yacob  <locales@geez.org>

	* configure.ac: Added "am" (Amharic) to ALL_LINGUAS.

Fri Jan 24 15:18:24 2003  Owen Taylor  <otaylor@redhat.com>

	* bfdutils.c (read_bfd): Fix a memory leak.

Fri Jan 24 12:31:47 2003  Owen Taylor  <otaylor@redhat.com>

	* bfdutils.c (find_separate_debug_file): Add support
	for separate debug info files pointed to be 